# sigescon-fastapi

./: .gitignore  CLAUDE.md  CORRECAO_PERFIL_ID.md  INTEGRACAO_LOGS_AUDITORIA.md  RACE_CONDITION_FIX.md  README.md  SETUP_SISTEMA_README.md  check_contratos.py  check_database_structure.py  check_usuario_perfil_constraints.py  check_usuario_perfil_structure.py  claude.md  debug_perfil_issue.py  diagnose_server.sh  migrate_to_new_setup.sh  migration_plan_detailed.md  pyproject.toml  pytest.ini  reset_clean.sh  reset_database.sh  reset_examples.sh  reset_rafael_password.py  run_tests.sh  safe_reset_server.sh  setup_sistema.sh  test_alerts.py  test_alerts_silent.py  test_arquivos_contrato.py  test_audit_integration.py  test_complete_system.py  test_contrato_creation.py  test_create_user.py  test_fiscal_dashboard.py  test_grant_profile.py  test_logout_fix.py  test_report_submission.py  test_setup.py  test_upload_multiplo.py  test_usuarios_api.py  teste_sync.py
app/: main.py  scheduler.py  seeder.py
app/api/: dependencies.py  doc_dependencies.py  exception_handlers.py  permissions.py
app/core/: config.py  database.py  exceptions.py  security.py
app/middleware/: audit.py  logging.py
app/repositories/: arquivo_repo.py  audit_log_repo.py  config_repo.py  contratado_repo.py  contrato_repo.py  dashboard_repo.py  modalidade_repo.py  password_reset_repo.py  pendencia_repo.py  perfil_repo.py  relatorio_repo.py  session_context_repo.py  status_pendencia_repo.py  status_relatorio_repo.py  status_repo.py  usuario_perfil_repo.py  usuario_repo.py
app/schemas/: arquivo_schema.py  audit_log_schema.py  config_schema.py  contratado_schema.py  contrato_schema.py  dashboard_schema.py  modalidade_schema.py  (+11 more)
database/: add_garantia_field.sql  add_password_reset_tokens.sql  create_database_complete.sql  database.sql  migration_perfil_id_nullable.sql  multiplo.sql
docs/: CHANGELOG_v2.5.md  DATABASE_RESET.md  Documentação da API SIGESCON v2.0 - Guia de Uso.md  Documento de Arquitetura de Software (SAD).md  Documento de Design de Projeto (PDR)_ SIGESCON-FastAPI v2.md  Especificação de Requisitos de Software (SRS)_ SIGESCON-FastAPI v2.0.md  FUNCIONALIDADES_v2.5.md  README.md
migrations/: 002_create_audit_log.sql  003_create_escalation_config.sql  add_alertas_vencimento_config.sql  add_lembretes_config.sql  add_modelo_relatorio_config.sql  create_notification_log.sql
scripts/: apply_endpoint_fixes.py  diagnose_server.py  final_fix.py  inspect_server_schema.py  migrate_to_multiple_profiles.py  quick_fixes.py  quick_reset.py  reset_and_seed_database.py  reset_database.sql  safe_reset_server.py  seed_example_data.py  test_multiple_profiles_complete.py  universal_reset.py
tests/: conftest.py  test_arquivos_contrato.py.bak  test_auth_e_usuarios.py  test_contexto_sessao_alternancia_perfis.py  test_contratados.py  test_contratos.py  test_dashboard.py  test_data_integrity.py  test_email_service.py  test_isolamento_dados_perfil.py  test_middleware_audit.py  test_modalidades.py  test_notification_system.py  test_novo_status_aguardando_analise.py  test_pendencias.py  test_perfis.py  test_relatorios.py  test_security_authorization.py  test_status.py  test_status_pendencia.py  test_status_relatorio.py  test_usuarios_complete.py  test_workflow_relatorios.py
(+40 files in other folders)
