[project]
name = "sigescon-fastapi"
version = "0.1.0"
description = "Sistema de Gestão de Contratos com FastAPI"
authors = [{ name = "Rafael", email = "rafaelblur@gmail.com" }]
requires-python = ">=3.10"

# Dependências principais da aplicação
dependencies = [
    "fastapi[all]",
    "asyncpg",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "Werkzeug>=2.0,<4.0"  # Versão mais flexível do Werkzeug
]

[project.optional-dependencies]
# Dependências usadas apenas para desenvolvimento e testes
dev = [
    "pytest",
    "pytest-asyncio",    # Plugin para testes async
    "httpx",
    "anyio"
]

[tool.pytest.ini_options]
# Adiciona opções padrão ao comando pytest
addopts = [
    "-sv",          # Mostra prints e detalhes (verbose)
    "-p",           # Usa a opção de plugin
    "no:asyncio",   # DESATIVA o plugin 'asyncio'
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
]
