[project]
name = "sigescon-fastapi"
version = "0.1.0"
description = "Sistema de Gestão de Contratos com FastAPI"
authors = [{ name = "Rafael", email = "rafaelblur@gmail.com" }]
requires-python = ">=3.10"

# Dependências principais da aplicação
dependencies = [
    "fastapi[all]",
    "asyncpg",
    "python-dotenv",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "pydantic-settings",
    "Werkzeug>=2.0,<4.0",
    "aiofiles",
    "aiosmtplib",
    "apscheduler",
    "requests",
    "reportlab"
]

[project.optional-dependencies]
# Dependências usadas apenas para desenvolvimento e testes
dev = [
    "pytest",
    "pytest-asyncio",    
    "httpx",
    "anyio"
]

[tool.setuptools]
packages = ["app"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"  # Ativa o modo assíncrono automaticamente
addopts = [
    "-v",           # Verbose
    "-s",           # Mostra prints
    "--tb=short",   # Traceback curto
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.21.0",
]